--- a/miscellaneous/security.txt.yaml
+++ b/miscellaneous/security.txt.yaml
@@ -3,15 +3,20 @@ id: security-txt
 info:
   name: Security.txt File
   author: bad5ect0r
+  modified by: gdattacker
   severity: info
   description: The website defines a security policy.
-  tags: misc
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/.well-known/security.txt"
       - "{{BaseURL}}/security.txt"
+      - "{{BaseURL}}/disclosure"
+      - "{{BaseURL}}/bugbounty"
+      - "{{BaseURL}}/security"
+      - "{{BaseURL}}/whitehat"
+      - "{{BaseURL}}/vdp"
     matchers-condition: and
     matchers:
       - type: status
@@ -20,6 +25,12 @@ requests:
       - type: word
         words:
           - "Contact:"
+          - "mail:"
+          - "report"
+          - "vulnerability"
+          - "bug"
+          - "security"
+          - "email"
         condition: and
       - type: dsl
         dsl:
