--- a/exposures/files/keycloak-json.yaml
+++ b/exposures/files/keycloak-json.yaml
@@ -3,7 +3,7 @@ info:
   name: Keycloak Json File
   author: oppsec
   severity: info
-  tags: file,exposure
+  tags: exposure
 
 requests:
   - method: GET
