--- a/exposures/files/drupal-install.yaml
+++ b/exposures/files/drupal-install.yaml
@@ -4,12 +4,13 @@ info:
   name: Drupal Install
   author: NkxxkN
   severity: low
-  tags: file,exposure
+  tags: exposure
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/install.php?profile=default"
+
     redirects: true
     max-redirects: 1
     matchers:
