--- a/exposures/files/lazy-file.yaml
+++ b/exposures/files/lazy-file.yaml
@@ -4,7 +4,7 @@ info:
   name: Lazy File Manager
   author: amsda
   severity: medium
-  tags: file,exposure
+  tags: exposure
 
 requests:
   - method: GET
