--- a/exposures/default/default-fastcgi-page.yaml
+++ b/exposures/default/default-fastcgi-page.yaml
@@ -1,7 +1,7 @@
 id: default-fastcgi-page
 
 info:
-  name: Plesk Default Test Page
+  name: Fastcgi Default Test Page
   author: dhiyaneshDk
   severity: low
   tags: default,exposure
