--- a/takeovers/bitbucket-takeover.yaml
+++ b/takeovers/bitbucket-takeover.yaml
@@ -12,8 +12,13 @@ requests:
     path:
       - "{{BaseURL}}"
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
-          - The page you have requested does not exist
           - Repository not found
+        part: body
+
+        words:
+          - text/plain
+        part: header
