--- a/takeovers/bitbucket-takeover.yaml
+++ b/takeovers/bitbucket-takeover.yaml
@@ -19,6 +19,7 @@ requests:
           - Repository not found
         part: body
 
+      - type: word
         words:
           - text/plain
         part: header
