misc changes and moving files around

--- a/technologies/default-apache2-ubuntu-page.yaml
+++ b/technologies/default-apache2-ubuntu-page.yaml
@@ -3,8 +3,8 @@ id: default-apache2-ubuntu-page
 info:
   name: Apache2 Ubuntu Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,apache
   reference: https://www.shodan.io/search?query=http.title%3A%22Apache2+Ubuntu+Default+Page%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>Apache2 Ubuntu Default Page: It works</title>"
-        condition: and
+        part: body
