--- a/technologies/default-django-page.yaml
+++ b/technologies/default-django-page.yaml
@@ -3,8 +3,8 @@ id: default-django-page
 info:
   name: Django Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,django
   reference: https://www.shodan.io/search?query=http.title%3A%22The+install+worked+successfully%21+Congratulations%21%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>The install worked successfully! Congratulations!</title>"
-        condition: and
+        part: body
