--- a/technologies/default-jetty-page.yaml
+++ b/technologies/default-jetty-page.yaml
@@ -3,8 +3,8 @@ id: default-jetty-page
 info:
   name: Jetty Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,jetty
   reference: https://www.shodan.io/search?query=http.title%3A%22Powered+By+Jetty%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<TITLE>Powered By Jetty</TITLE>"
-        condition: and
+        part: body
