--- a/technologies/default-nginx-page.yaml
+++ b/technologies/default-nginx-page.yaml
@@ -3,8 +3,8 @@ id: default-nginx-page
 info:
   name: Nginx Default Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,nginx
   reference: https://www.shodan.io/search?query=http.title%3A%22Welcome+to+nginx%21%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>Welcome to nginx!</title>"
-        condition: and
+        part: body
