--- a/technologies/default-tomcat-page.yaml
+++ b/technologies/default-tomcat-page.yaml
@@ -3,8 +3,8 @@ id: default-tomcat-page
 info:
   name: Tomcat Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,tomcat
   reference: https://www.shodan.io/search?query=http.title%3A%22Apache+Tomcat%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>Apache Tomcat"
-        condition: and
+        part: body
