--- a/technologies/default-apache-test-page.yaml
+++ b/technologies/default-apache-test-page.yaml
@@ -3,16 +3,17 @@ id: default-apache-test-page
 info:
   name: Apache HTTP Server Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,apache
   reference: https://www.shodan.io/search?query=http.title%3A%22Apache+HTTP+Server+Test+Page+powered+by+CentOS%22
 
 requests:
   - method: GET
     path:
       - '{{BaseURL}}'
+
     matchers:
       - type: word
         words:
           - "<title>Apache HTTP Server Test Page powered by CentOS</title>"
-        condition: and
+        part: body
