--- a/technologies/default-apache2-page.yaml
+++ b/technologies/default-apache2-page.yaml
@@ -3,16 +3,17 @@ id: default-apache2-page
 info:
   name: Apache2 Default Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,apache
   reference: https://www.shodan.io/search?query=http.title%3A%22Apache2+Debian+Default+Page%3A+It+works%22
 
 requests:
   - method: GET
     path:
       - '{{BaseURL}}'
+
     matchers:
       - type: word
         words:
           - "<title>Apache2 Debian Default Page: It works</title>"
-        condition: and
+        part: body
