--- a/technologies/default-asp.net-page.yaml
+++ b/technologies/default-asp.net-page.yaml
@@ -3,8 +3,8 @@ id: default-asp.net-page
 info:
   name: ASP.Net Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,asp
   reference: https://www.shodan.io/search?query=http.title%3A%22Home+Page+-+My+ASP.NET+Application%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "Home Page - My ASP.NET Application"
-        condition: and
+        part: body
