--- a/technologies/default-centos-test-page.yaml
+++ b/technologies/default-centos-test-page.yaml
@@ -3,8 +3,8 @@ id: default-centos-test-page
 info:
   name: CentOs-WebPanel Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,centos
   reference: https://www.shodan.io/search?query=http.title%3A%22HTTP+Server+Test+Page+powered+by+CentOS-WebPanel.com%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>HTTP Server Test Page powered by CentOS-WebPanel.com</title>"
-        condition: and
+        part: body
