--- a/technologies/default-fastcgi-page.yaml
+++ b/technologies/default-fastcgi-page.yaml
@@ -3,8 +3,8 @@ id: default-fastcgi-page
 info:
   name: Fastcgi Default Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,fastcgi
   reference: https://www.shodan.io/search?query=http.title%3A%22FastCGI%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>TurnKey NGINX PHP FastCGI Server</title>"
-        condition: and
+        part: body
