--- a/technologies/default-fedora-page.yaml
+++ b/technologies/default-fedora-page.yaml
@@ -3,8 +3,8 @@ id: default-fedora-page
 info:
   name: Fedora Default Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,fedora
   reference: https://www.shodan.io/search?query=http.title%3A%22Test+Page+for+the+HTTP+Server+on+Fedora%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - '<title>Test Page for the HTTP Server on Fedora</title>'
-        condition: and
+        part: body
