--- a/technologies/default-iis7-page.yaml
+++ b/technologies/default-iis7-page.yaml
@@ -3,8 +3,8 @@ id: default-iis7-page
 info:
   name: IIS-7 Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,iis
   reference: https://www.shodan.io/search?query=http.title%3A%22IIS7%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>IIS7</title>"
-        condition: and
+        part: body
