--- a/technologies/default-microsoft-azure-page.yaml
+++ b/technologies/default-microsoft-azure-page.yaml
@@ -3,8 +3,8 @@ id: default-microsoft-azure-page
 info:
   name: Microsoft Azure Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,azure,microsoft
   reference: https://www.shodan.io/search?query=http.title%3A%22Microsoft+Azure+App+Service+-+Welcome%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>Microsoft Azure App Service - Welcome</title>"
-        condition: and
+        part: body
