--- a/technologies/default-oracle-application-page.yaml
+++ b/technologies/default-oracle-application-page.yaml
@@ -3,8 +3,8 @@ id: default-oracle-application-page
 info:
   name: Oracle Application Server Containers
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,oracle
   reference: https://www.shodan.io/search?query=http.title%3A%22Oracle+Application+Server+Containers%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<TITLE>Oracle Application Server Containers for J2EE 10g</TITLE>"
-        condition: and
+        part: body
