--- a/technologies/default-payara-server-page.yaml
+++ b/technologies/default-payara-server-page.yaml
@@ -3,8 +3,8 @@ id: default-payara-server-page
 info:
   name: Payara Server Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,payara
   reference: https://www.shodan.io/search?query=http.title%3A%22Payara+Server+-+Server+Running%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>Payara Server - Server Running</title>"
-        condition: and
+        part: body
