--- a/technologies/default-plesk-page.yaml
+++ b/technologies/default-plesk-page.yaml
@@ -3,8 +3,8 @@ id: default-plesk-page
 info:
   name: Plesk Default Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,plesk
   reference: https://www.shodan.io/search?query=http.title%3A%22Web+Server%27s+Default+Page%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>Web Server's Default Page</title>"
-        condition: and
+        part: body
