--- a/technologies/default-ssltls-test-page.yaml
+++ b/technologies/default-ssltls-test-page.yaml
@@ -3,8 +3,8 @@ id: default-ssltls-test-page
 info:
   name: SSL/TLS-aware Test Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,ssltls
   reference: https://www.shodan.io/search?query=http.title%3A%22Test+Page+for+the+SSL%2FTLS-aware+Apache+Installation+on+Web+Site%22&page=2
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<TITLE>Test Page for the SSL/TLS-aware Apache Installation on Web Site</TITLE>"
-        condition: and
+        part: body
