--- a/technologies/default-windows-server-page.yaml
+++ b/technologies/default-windows-server-page.yaml
@@ -3,8 +3,8 @@ id: default-windows-server-page
 info:
   name: IIS Windows Server Default Page
   author: dhiyaneshDk
-  severity: low
-  tags: default,exposure
+  severity: info
+  tags: tech,windows,iis
   reference: https://www.shodan.io/search?query=http.title%3A%22IIS+Windows+Server%22
 
 requests:
@@ -15,4 +15,4 @@ requests:
       - type: word
         words:
           - "<title>IIS Windows Server</title>"
-        condition: and
+        part: body
