--- a/default-logins/szhe/szhe-default-password.yaml
+++ b/default-logins/szhe/szhe-default-password.yaml
@@ -4,8 +4,8 @@ info:
   name: Szhe Default Password
   author: pikpikcu
   severity: low
-  tags: szhe,dlogin
-# vendor: https://github.com/Cl0udG0d/SZhe_Scan
+  tags: szhe,default-login
+  vendor: https://github.com/Cl0udG0d/SZhe_Scan
 
 requests:
   - method: POST
@@ -14,18 +14,18 @@ requests:
     headers:
       Content-Type: application/x-www-form-urlencoded
     body: |
-      email=springbird%40qq.com&password=springbird&remeber=true
+      email=springbird@qq.com&password=springbird&remeber=true
 
     matchers-condition: and
     matchers:
 
       - type: word
         words:
-          - '<a href=\"/\">'
+          - 'You should be redirected automatically to target URL: <a href="/">/</a>'
 
       - type: word
         words:
-          - 'Set-Cookie'
+          - 'Set-Cookie: session'
         part: header
 
       - type: status
