more strict matcher

--- a/exposures/configs/hikvision-info-leak.yaml
+++ b/exposures/configs/hikvision-info-leak.yaml
@@ -9,11 +9,17 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}//config/user.xml'
+      - '{{BaseURL}}/config/user.xml'
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
           - '<user name='
           - 'password='
         condition: and
+
+      - type: word
+        words:
+          - "text/xml"
+        part: header
