--- a/exposures/configs/hjtcloud-information-disclosure.yaml
+++ b/exposures/configs/hjtcloud-information-disclosure.yaml
@@ -6,12 +6,11 @@ info:
   severity: low
   reference: https://mp.weixin.qq.com/s/w2pkj5ADN7b5uxe-wmfGbw
   tags: hjtcloud,exposure,config
-  
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}//him/api/rest/V1.0/system/log/list?filePath=../"
+      - "{{BaseURL}}/him/api/rest/V1.0/system/log/list?filePath=../"
 
     matchers-condition: and
     matchers:
