--- a/technologies/dns-based-waf-detect.yaml
+++ b/technologies/dns-based-waf-detect.yaml
@@ -4,14 +4,21 @@ info:
   name: DNS-based WAF Detection
   author: lu4nx
   severity: info
-  tags: waf,tech, cloud
+  tags: tech,waf,dns
 
 dns:
   - name: "{{FQDN}}"
-    type: A
+    type: CNAME
     recursion: true
     retries: 5
     class: inet
+
+  - name: "{{FQDN}}"
+    type: NS
+    recursion: true
+    retries: 5
+    class: inet
+
     matchers:
       - type: word
         name: sanfor-shield
@@ -119,15 +126,8 @@ dns:
           - ".hwwsdns.cn"
           - ".yunduncname.com"
 
-dns:
-  - name: "{{FQDN}}"
-    type: NS
-    recursion: true
-    retries: 5
-    class: inet
-    matchers:
       - type: word
-        name: knownsec
+        name: knownsec-ns
         words:
           - ".jiasule.net"
 
