--- a/vulnerabilities/wordpress/wp-statistics-blindsql.yaml
+++ b/vulnerabilities/wordpress/wp-statistics-blindsql.yaml
@@ -28,5 +28,5 @@ requests:
 
       - type: regex
         regex:
-          - 'Stable tag\: [1][3]\.[0].([1]|[2]|[3]|[4]|[5]|[6]|[7])|[1][3]\.[0]'
+          - 'Stable tag\: [1][3]\.[0].([1]|[2]|[3]|[4]|[5]|[6]|[7])|[1][3]\.[0]$'
         part: body
