--- a/vulnerabilities/wordpress/wordpress-db-repair.yaml
+++ b/vulnerabilities/wordpress/wordpress-db-repair.yaml
@@ -16,7 +16,7 @@ requests:
     matchers:
       - type: word
         words:
-          - "WordPress &rsaquo; Database Repair"
+          - "<title>WordPress"
 
       - type: word
         words:
