--- a/vulnerabilities/other/hjtcloud-arbitrary-file-read.yaml
+++ b/vulnerabilities/other/hjtcloud-arbitrary-file-read.yaml
@@ -27,19 +27,16 @@ requests:
         Content-Type: application/x-www-form-urlencoded; charset=UTF-8
         Content-Length: 20
 
-        fullPath=/Windows/win.ini      
+        fullPath=/Windows/win.ini
 
     matchers-condition: and
     matchers:
 
       - type: regex
         regex:
-          - "root:[x*]:0:0"
-
-      - type: word
-        words:
-          - "extensions"
-        part: body
+          - "root:[x*]:0:0:"
+          - "bit app support"
+        condition: or
 
       - type: status
         status:
