--- a/exposed-panels/synnefo-admin-panel.yaml
+++ b/exposed-panels/synnefo-admin-panel.yaml
@@ -4,7 +4,7 @@ info:
   name: Synnefo Admin Panel Exposure
   author: impramodsargar
   severity: info
-  tags: panel
+  tags: panel,synnefo
 
 requests:
   - method: GET
