--- a/default-logins/arl/arl-default-password.yaml
+++ b/default-logins/arl/arl-default-password.yaml
@@ -20,7 +20,9 @@ requests:
 
       - type: word
         words:
-          - '\"token\":'
+          - '"message": "success"'
+          - '"username": "admin"'
+          - '"type": "login"'
 
       - type: status
         status:
