--- a/default-logins/arl/arl-default-password.yaml
+++ b/default-logins/arl/arl-default-password.yaml
@@ -23,7 +23,7 @@ requests:
           - '"message": "success"'
           - '"username": "admin"'
           - '"type": "login"'
-
+        condition: and
       - type: status
         status:
           - 200
