--- a/vulnerabilities/other/blue-ocean-excellence-lfi.yaml
+++ b/vulnerabilities/other/blue-ocean-excellence-lfi.yaml
@@ -3,7 +3,7 @@ id: blue-ocean-excellence-lfi
 info:
   name: Blue Ocean Excellence LFI
   author: pikpikcu
-  severity: medium
+  severity: high
   reference: https://blog.csdn.net/qq_41901122/article/details/116786883
   tags: blue-ocean,lfi
 
@@ -17,7 +17,7 @@ requests:
 
       - type: regex
         regex:
-          - "toot:[x*]:0:0"
+          - "toor:[x*]:0:0"
 
       - type: status
         status:
