moving files around

--- a/exposed-panels/openerp-database.yaml
+++ b/exposed-panels/openerp-database.yaml
@@ -1,10 +1,10 @@
-id: OpenERP-database-instances
+id: openerp-database
 
-info: 
+info:
   name: OpenERP database instances
   author: impramodsargar
   severity: info
-  tags: database
+  tags: openerp
 
 requests:
   - method: GET
