--- a/vulnerabilities/wordpress/wp-plugin-statistics-sqli.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-statistics-sqli.yaml
@@ -1,4 +1,5 @@
-id: WP-Statistics-BlindSQL
+id: wp-plugin-statistics-sqli
+
 info:
   name: WordPress Plugin WP Statistics 13.0-.7 - Unauthenticated Time-Based Blind SQL Injection
   author: lotusdll
@@ -8,7 +9,7 @@ info:
     - https://www.exploit-db.com/exploits/49894
     - https://www.wordfence.com/blog/2021/05/over-600000-sites-impacted-by-wp-statistics-patch/
     - https://github.com/Udyz/WP-Statistics-BlindSQL
-  tags: unauth,blindsql,wordpress
+  tags: wordpress,wp-plugin,unauth,sqli,blind
 
 requests:
   - method: GET
