--- a/exposures/backups/zip-backup-files.yaml
+++ b/exposures/backups/zip-backup-files.yaml
@@ -32,6 +32,8 @@ requests:
       - "{{BaseURL}}/{{Hostname}}.sql.zip"
       - "{{BaseURL}}/{{Hostname}}.sql.z"
       - "{{BaseURL}}/{{Hostname}}.sql.tar.z"
+
+    max-size: 500 # Size in bytes - Max Size to read from server response
     matchers-condition: and
     matchers:
       - type: binary
@@ -49,10 +51,12 @@ requests:
           - "504B0304"  # zip
         condition: or
         part: body
+
       - type: regex
         regex:
           - "application/[-\\w.]+"
         part: header
+
       - type: status
         status:
           - 200
