--- a/vulnerabilities/other/hjtcloud-rest-arbitrary-file-read.yaml
+++ b/vulnerabilities/other/hjtcloud-rest-arbitrary-file-read.yaml
@@ -17,10 +17,17 @@ requests:
 
       - type: word
         words:
-          - "name"
-          - "length"
-          - "filePath"
+          - '"name":'
+          - '"length":'
+          - '"filePath":'
+          - '"list":'
         condition: and
+        part: body
+
+      - type: word
+        words:
+          - "application/json"
+        part: header
 
       - type: status
         status:
