--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -26,6 +26,8 @@ requests:
         part: body
         regex:
           - (K|k)ey(up|down|press)
+          - (K|k)eyboard(N|n)avigation
+        condition: or
         negative: true
 
     extractors:
