--- a/exposures/configs/detect-drone-config.yaml
+++ b/exposures/configs/detect-drone-config.yaml
@@ -16,9 +16,9 @@ requests:
     matchers:
       - type: word
         words:
-          - "services:"
-          - "environment:"
-          - "commands:"
+          - "kind:"
+          - "name:"
+          - "steps:"
         condition: and
       - type: status
         status:
