--- a/exposures/configs/detect-drone-config.yaml
+++ b/exposures/configs/detect-drone-config.yaml
@@ -5,7 +5,7 @@ info:
   author: geeknik
   description: Drone is a Container-Native, Continuous Delivery Platform -- https://github.com/drone/drone
   severity: high
-  tags: config,exposure,auth
+  tags: config,exposure,drone
 
 requests:
   - method: GET
