--- a/misconfiguration/alibaba-mongoshake-unauth.yaml
+++ b/misconfiguration/alibaba-mongoshake-unauth.yaml
@@ -9,20 +9,18 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/conf'
-      - '{{BaseURL}}/worker'
-      - '{{BaseURL}}/repl'
+      - '{{BaseURL}}/'
 
     matchers-condition: and
     matchers:
 
       - type: word
         words:
-          - 'MongoUrls'
-          - 'worker_id'
-          - 'jobs_in_queue'
-          - 'logs_repl'
-          - 'who'
+          - '{"Uri":"/worker","Method":"GET"}'
+      - type: word
+        words:
+          - 'text/plain'
+        part: header
 
       - type: status
         status:
