--- a/exposed-panels/airflow-panel.yaml
+++ b/exposed-panels/airflow-panel.yaml
@@ -1,10 +1,10 @@
-id: apache-airflow
+id: airflow-panel
 
 info:
-  name: Apache Airflow
+  name: Airflow Admin login
   author: pdteam
   severity: info
-  tags: tech,apache,airflow
+  tags: panel,apache,airflow
 
 requests:
   - method: GET
