--- a/workflows/airflow-workflow.yaml
+++ b/workflows/airflow-workflow.yaml
@@ -14,5 +14,5 @@ workflows:
       - template: cves/2020/CVE-2020-13927.yaml
       - template: exposed-panels/airflow-panel.yaml
       - template: exposures/configs/airflow-configuration-exposure.yaml
-      - template: misconfiguration/unauthenticated-airflow.yaml
       - template: default-logins/apache/airflow-default-credentials.yaml
+      - template: misconfiguration/airflow/
