--- a/exposures/configs/airflow-configuration-exposure.yaml
+++ b/exposures/configs/airflow-configuration-exposure.yaml
@@ -4,7 +4,7 @@ info:
   name: Apache Airflow Configuration Exposure
   author: pdteam
   severity: medium
-  tags: exposure,config
+  tags: exposure,config,airflow,apache
 
 requests:
   - method: GET
