--- a/default-logins/apache/airflow-default-credentials.yaml
+++ b/default-logins/apache/airflow-default-credentials.yaml
@@ -1,7 +1,7 @@
 id: airflow-default-credentials
 
 info:
-  name: Apache Airflwo Default Credentials
+  name: Apache Airflow Default Credentials
   author: pdteam
   severity: critical
   tags: airflow,default-login
