--- a/exposed-panels/dotcms-admin-panel.yaml
+++ b/exposed-panels/dotcms-admin-panel.yaml
@@ -1,7 +1,7 @@
 id: dotcms-admin-panel
 
 info:
-  name: dotcms-admin-panel
+  name: dotAdmin Panel
   author: impramodsargar
   severity: info
   tags: panel
