moving files around

--- a/cnvd/CNVD-2021-10543.yaml
+++ b/cnvd/CNVD-2021-10543.yaml
@@ -1,11 +1,11 @@
-id: eea-disclosure
+id: CNVD-2021-10543
 
 info:
   name: EEA Information Disclosure
   author: pikpikcu
   severity: high
   reference: https://www.cnvd.org.cn/flaw/show/CNVD-2021-10543
-  tags: config,exposure
+  tags: config,exposure,cnvd
 
 requests:
   - method: GET
