--- a/cnvd/CNVD-2020-56167.yaml
+++ b/cnvd/CNVD-2020-56167.yaml
@@ -1,11 +1,11 @@
-id: ruijie-smartweb-default-password
+id: CNVD-2020-56167
 
 info:
   name: Ruijie Smartweb Default Password
   author: pikpikcu
   severity: low
   reference: https://www.cnvd.org.cn/flaw/show/CNVD-2020-56167
-  tags: ruijie,default-login
+  tags: ruijie,default-login,cnvd
 
 requests:
   - method: POST
