--- a/cnvd/CNVD-2021-17369.yaml
+++ b/cnvd/CNVD-2021-17369.yaml
@@ -1,11 +1,11 @@
-id: ruijie-smartweb-disclosure
+id: CNVD-2021-17369
 
 info:
   name: Ruijie Smartweb Management System Password Information Disclosure
   author: pikpikcu
   severity: medium
   reference: https://www.cnvd.org.cn/flaw/show/CNVD-2021-17369
-  tags: ruijie,disclosure
+  tags: ruijie,disclosure,cnvd
 
 requests:
   - method: GET
