Fix to detect graphql servers that don't enable introspection

--- a/technologies/graphql.yaml
+++ b/technologies/graphql.yaml
@@ -2,7 +2,7 @@ id: graphql
 
 info:
   name: GraphQL API
-  author: NkxxkN & ELSFA7110
+  author: NkxxkN & ELSFA7110 & shelld3v
   severity: info
 
 requests:
@@ -62,4 +62,3 @@ requests:
         regex:
           - "__schema"
           - "(Introspection|INTROSPECTION|introspection).*?"
-          - ".*?operation not found.*?"
