--- a/workflows/ruijie-workflow.yaml
+++ b/workflows/ruijie-workflow.yaml
@@ -6,9 +6,9 @@ info:
   description: A simple workflow that runs all Ruijie related nuclei templates on a given target.
 
 workflows:
-  - template: default-logins/smartweb/ruijie-smartweb-default-password.yaml
+  - template: cnvd/CNVD-2021-17369.yaml
   - template: vulnerabilities/other/ruijie-networks-lfi.yaml
   - template: vulnerabilities/other/ruijie-networks-rce.yaml
   - template: exposures/configs/ruijie-information-disclosure.yaml
-  - template: exposures/configs/ruijie-smartweb-disclosure.yaml
+  - template: cnvd/CNVD-2020-56167.yaml
   - template: exposures/configs/ruijie-phpinfo.yaml
