wordpress workflow update

--- a/workflows/wordpress-workflow.yaml
+++ b/workflows/wordpress-workflow.yaml
@@ -32,4 +32,5 @@ workflows:
           - template: cves/2020/CVE-2020-35489.yaml
           - template: cves/2021/CVE-2021-24146.yaml
           - template: cves/2021/CVE-2021-24176.yaml
+          - template: cves/2021/CVE-2021-24316.yaml
           - template: vulnerabilities/wordpress/
