--- a/exposures/configs/exposed-bzr.yaml
+++ b/exposures/configs/exposed-bzr.yaml
@@ -18,8 +18,13 @@ requests:
         words:
           - "parent_location"
           - "push_location"
-        condition: and
+        condition: or
 
       - type: status
         status:
           - 200
+
+      - type: word
+        part: header
+        words:
+          - "text/plain"
