Fixing the condition

--- a/vulnerabilities/other/interlib-fileread.yaml
+++ b/vulnerabilities/other/interlib-fileread.yaml
@@ -19,8 +19,8 @@ requests:
       - type: regex
         regex:
           - "root:[x*]:0:0"
-          - "for 16-bit"
-        condition: and
+          - "for 16-bit app support"
+        condition: or
 
       - type: status
         status:
