--- a/technologies/graphql-detect.yaml
+++ b/technologies/graphql-detect.yaml
@@ -1,7 +1,7 @@
-id: graphql
+id: graphql-detect
 
 info:
-  name: GraphQL API
+  name: GraphQL API Detection
   author: NkxxkN & ELSFA7110
   severity: info
 
@@ -51,6 +51,7 @@ requests:
 
     headers:
       Content-Type: application/json
+
     body: '{"query":"query IntrospectionQuery{__schema {queryType { name }}}"}'
 
     matchers-condition: and
@@ -58,8 +59,10 @@ requests:
       - type: status
         status:
           - 200
+
       - type: regex
         regex:
           - "__schema"
           - "(Introspection|INTROSPECTION|introspection).*?"
           - ".*?operation not found.*?"
+        condition: or
