Renamed SAP Netweaver Portal

--- a/exposed-panels/sap-netweaver-portal.yaml
+++ b/exposed-panels/sap-netweaver-portal.yaml
@@ -1,10 +1,10 @@
-id: sap-netweaver-portal-detect
+id: sap-netweaver-portal
 
 info:
-  name: SAP NetWeaver Portal detect
+  name: SAP NetWeaver Portal
   author: organiccrap
   severity: info
-  tags: panel
+  tags: panel,sap
 
   # SAP Netweaver default creds - SAP*/06071992 or TMSADM/$1Pawd2&
 
