--- a/exposures/configs/rails-database-config.yaml
+++ b/exposures/configs/rails-database-config.yaml
@@ -2,7 +2,7 @@ id: rails-database-config
 
 info:
   name: Ruby-on-Rails Database Configuration Exposure
-  author: pdteam
+  author: pdteam & geeknik
   severity: low
   tags: config,exposure
 
@@ -10,7 +10,13 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/config/database.yml"
+
+    matchers-condition: and
     matchers:
+      - type: word
+        part: header
+        words:
+          - "application/octet-stream"
       - type: word
         words:
           - "adapter:"
