--- a/misconfiguration/aws-object-listing.yaml
+++ b/misconfiguration/aws-object-listing.yaml
@@ -23,3 +23,9 @@ requests:
         words:
           - application/xml
         part: header
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - '<Name>([a-z0-9-._]+)'
