--- a/misconfiguration/shell-history.yaml
+++ b/misconfiguration/shell-history.yaml
@@ -22,6 +22,22 @@ requests:
       - type: word
         words:
           - "chmod "
+          - "exit"
+          - "kill "
+          - "nano "
+          - "vim "
+          - "pico "
+          - "sudo "
+          - "rm "
+          - "cd "
+          - "ps aux "
+        condition: or
+        
       - type: status
         status:
           - 200
+      - type: word
+        words:
+          - "<html "
+        part: body
+        negative: true
