--- a/takeovers/acquia-takeover.yaml
+++ b/takeovers/acquia-takeover.yaml
@@ -18,3 +18,4 @@ requests:
         words:
           - If you are an Acquia Cloud customer and expect to see your site at this address
           - The site you are looking for could not be found.
+        condition: and
