--- a/takeovers/bitbucket-takeover.yaml
+++ b/takeovers/bitbucket-takeover.yaml
@@ -16,10 +16,10 @@ requests:
     matchers:
       - type: word
         words:
-          - Repository not found
+          - "Repository not found"
         part: body
 
       - type: word
         words:
-          - text/plain
+          - "text/plain"
         part: header
