--- a/exposures/configs/rails-database-config.yaml
+++ b/exposures/configs/rails-database-config.yaml
@@ -4,22 +4,22 @@ info:
   name: Ruby-on-Rails Database Configuration Exposure
   author: pdteam & geeknik
   severity: low
-  tags: config,exposure
+  tags: config,exposure,rails
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/config/database.yml"
 
-    matchers-condition: and
     matchers:
-      - type: word
-        part: header
-        words:
-          - "application/octet-stream"
       - type: word
         words:
           - "adapter:"
           - "database:"
+          - "production:"
         condition: and
         part: body
+
+      - type: status
+        status:
+          - 200
