--- a/exposures/configs/rails-database-config.yaml
+++ b/exposures/configs/rails-database-config.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "{{BaseURL}}/config/database.yml"
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
