--- a/misconfiguration/exposed-jquery-file-upload.yaml
+++ b/misconfiguration/exposed-jquery-file-upload.yaml
@@ -12,8 +12,13 @@ requests:
     path:
       - "{{BaseURL}}/jquery-file-upload/server/php/"
 
+    matchers-condition: and
     matchers:
       - type: regex
         regex:
           - '^{\"files\":'
         part: body
+      - type: word
+        words:
+          - "text/plain"
+        part: header
