--- a/miscellaneous/email-extractor.yaml
+++ b/miscellaneous/email-extractor.yaml
@@ -1,20 +1,16 @@
-id: email-address-extraction
+id: email-extractor
 
 info:
-  name: Extract Email addresses
+  name: Email Extractor
   author: panch0r3d
   severity: info
+  tags: misc,email
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
 
-    matchers-condition: and
-    matchers:
-      - type: regex
-        regex:
-          - "[a-zA-Z0-9-_.]{4,}@[A-Za-z0-9_-]+[.](com|org|net|io|gov|co|co.uk|com.mx|com.br|com.sv|co.cr|com.gt|com.hn|com.ni|com.au|com.cn)"
     extractors:
       - type: regex
         part: body
