--- a/misconfiguration/artifactory-anonymous-deploy.yaml
+++ b/misconfiguration/artifactory-anonymous-deploy.yaml
@@ -1,27 +1,29 @@
 id: artifactory-anonymous-deploy
 
 info:
-  name: Artifactory repos with anonymous deploy permissions
+  name: Artifactory anonymous deploy
   reference: https://www.errno.fr/artifactory/Attacking_Artifactory.html
   author: panch0r3d
   severity: high
+  tags: artifactory
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/artifactory/ui/repodata?deploy=true"
-    headers:
-      User-Agent: "Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0"
+
     matchers-condition: and
     matchers:
-      - type: regex
-        regex:
-          - '(repoList).*?["].*["]'
-          - '(repoTypesList).*?["].*["]'
+      - type: word
+        words:
+          - '"repoKey"'
         part: body
-    extractors:
-      - type: regex
-        part: body
-        regex:
-          - '(repoTypesList).*?["].*["]'
-          - '(repoList).*?["].*["]'
+
+      - type: status
+        status:
+          - 200
+
+      - type: word
+        words:
+          - "application/json"
+        part: header
