--- a/exposures/configs/server-private-keys.yaml
+++ b/exposures/configs/server-private-keys.yaml
@@ -27,6 +27,7 @@ requests:
       - "{{BaseURL}}/{{Hostname}}.pem"
       - "{{BaseURL}}/config/jwt/private.pem"
       - "{{BaseURL}}/jwt/private.pem"
+      - "{{BaseURL}}/var/jwt/private.pem"
       - "{{BaseURL}}/private.pem"
 
     matchers-condition: and
