--- a/workflows/sap-netweaver-workflow.yaml
+++ b/workflows/sap-netweaver-workflow.yaml
@@ -16,7 +16,7 @@ workflows:
       - template: exposed-panels/hmc-hybris-panel.yaml
       - template: exposed-panels/sap-netweaver-portal.yaml
       - template: exposed-panels/sap-hana-xsengine-panel.yaml
-      - template: misconfiguration/
+      - template: misconfiguration/sap-directory-listing.yaml
 
   - template: network/sap-router.yaml # Network Templates
     subtemplates:
