--- a/technologies/sap-netweaver-detect.yaml
+++ b/technologies/sap-netweaver-detect.yaml
@@ -15,7 +15,7 @@ requests:
     redirects: true
     max-redirects: 2
     matchers:
-      - type: word
+      - type: regex
         part: header
         regex:
           - "sap-server:"
