Fixed linting error.

--- a/misconfiguration/iis-internal-ip-disclosure.yaml
+++ b/misconfiguration/iis-internal-ip-disclosure.yaml
@@ -4,7 +4,7 @@ info:
   name: IIS Internal IP Disclosure Template
   author: WillD96
   severity: none
-  description: Checks for disclosure of IIS Internal IP Address as per: https://support.kemptechnologies.com/hc/en-us/articles/203522429-How-to-Mitigate-Against-Internal-IP-Address-Domain-Name-Disclosure-In-Real-Server-Redirect
+  description: Checks for disclosure of IIS Internal IP Address as per https://support.kemptechnologies.com/hc/en-us/articles/203522429-How-to-Mitigate-Against-Internal-IP-Address-Domain-Name-Disclosure-In-Real-Server-Redirect
   tags: iis, config, disclosure
 
 requests:
