--- a/misconfiguration/iis-internal-ip-disclosure.yaml
+++ b/misconfiguration/iis-internal-ip-disclosure.yaml
@@ -4,18 +4,17 @@ info:
   name: IIS Internal IP Disclosure Template
   author: WillD96
   severity: none
-  description: Checks for disclosure of IIS Internal IP Address as per https://support.kemptechnologies.com/hc/en-us/articles/203522429-How-to-Mitigate-Against-Internal-IP-Address-Domain-Name-Disclosure-In-Real-Server-Redirect
   tags: iis, config, disclosure
 
 requests:
   - raw:
       - |+
         GET / HTTP/1.0
-        User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0 
+        User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0
         Accept: */*
 
 
-    unsafe: true #Unsafe HTTP Lib for 'malformed' requests.
+    unsafe: true
     matchers:
       - type: regex
         regex:
@@ -24,9 +23,8 @@ requests:
       - type: status
         status:
           - 302
-     
     extractors:
-       - type: regex
-         part: header
-         regex:
-           - '([0-9]{1,3}[\.]){3}[0-9]{1,3}'
+      - type: regex
+        part: header
+        regex:
+          - '([0-9]{1,3}[\.]){3}[0-9]{1,3}'
