--- a/workflows/jira-workflow.yaml
+++ b/workflows/jira-workflow.yaml
@@ -23,4 +23,5 @@ workflows:
       - template: cves/2019/CVE-2019-3403.yaml
       - template: cves/2020/CVE-2020-14179.yaml
       - template: cves/2020/CVE-2020-14181.yaml
+      - template: cves/2020/CVE-2020-36289.yaml
       - template: vulnerabilities/jira/
