--- a/file/keys/facebook-secret.yaml
+++ b/file/keys/facebook-secret.yaml
@@ -4,7 +4,7 @@ info:
   name: Facebook Secret Key
   author: gaurang
   severity: low
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
