--- a/file/keys/linkedin-id.yaml
+++ b/file/keys/linkedin-id.yaml
@@ -4,7 +4,7 @@ info:
   name: Linkedin Client ID
   author: gaurang
   severity: low
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
