--- a/file/keys/s3-bucket.yaml
+++ b/file/keys/s3-bucket.yaml
@@ -4,7 +4,7 @@ info:
   name: S3 Bucket Detect
   author: gaurang
   severity: info
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
