--- a/file/keys/amazon-mws-auth-token.yaml
+++ b/file/keys/amazon-mws-auth-token.yaml
@@ -4,7 +4,7 @@ info:
   name: Amazon MWS Auth Token
   author: gaurang
   severity: medium
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
