--- a/file/keys/aws-access-id.yaml
+++ b/file/keys/aws-access-id.yaml
@@ -4,7 +4,7 @@ info:
   name: AWS Access Key ID
   author: gaurang
   severity: info
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
