--- a/file/keys/aws-cognito.yaml
+++ b/file/keys/aws-cognito.yaml
@@ -4,7 +4,7 @@ info:
   name: AWS Cognito Pool ID
   author: gaurang
   severity: info
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
