--- a/file/keys/facebook-client-id.yaml
+++ b/file/keys/facebook-client-id.yaml
@@ -4,7 +4,7 @@ info:
   name: Facebook Client ID
   author: gaurang
   severity: info
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
