--- a/file/keys/gcp-service-account.yaml
+++ b/file/keys/gcp-service-account.yaml
@@ -4,7 +4,7 @@ info:
   name: Google (GCP) Service-account
   author: gaurang
   severity: low
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
