--- a/file/keys/mailchimp-api.yaml
+++ b/file/keys/mailchimp-api.yaml
@@ -4,7 +4,7 @@ info:
   name: Mailchimp API Key
   author: gaurang
   severity: high
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
