--- a/file/keys/paypal-braintree-token.yaml
+++ b/file/keys/paypal-braintree-token.yaml
@@ -4,7 +4,7 @@ info:
   name: Paypal Braintree Access Token
   author: gaurang
   severity: high
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
