--- a/file/keys/private-key.yaml
+++ b/file/keys/private-key.yaml
@@ -4,7 +4,7 @@ info:
   name: Private Key Detect
   author: gaurang
   severity: high
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
