--- a/file/keys/shopify-custom-token.yaml
+++ b/file/keys/shopify-custom-token.yaml
@@ -4,7 +4,7 @@ info:
   name: Shopify Custom App Access Token
   author: gaurang
   severity: high
-  tags: keys,file
+  tags: token,file
 
 file:
   - extensions:
