--- a/exposures/tokens/generic/shoppable-token.yaml
+++ b/exposures/tokens/generic/shoppable-token.yaml
@@ -4,13 +4,13 @@ info:
   name: Shoppable Service Auth Token
   author: philippedelteil
   severity: info
-  # References:
-  # - [1] https://ask.shoppable.com/knowledge/quick-start-api-guide
+  references: https://ask.shoppable.com/knowledge/quick-start-api-guide
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers:
       - type: word
         part: body
