--- a/vulnerabilities/other/mpsec-lfi.yaml
+++ b/vulnerabilities/other/mpsec-lfi.yaml
@@ -25,3 +25,8 @@ requests:
       - type: status
         status:
           - 200
+
+      - type: word
+        words:
+          - "text/plain"
+        part: header
