--- a/exposed-panels/jira-detect.yaml
+++ b/exposed-panels/jira-detect.yaml
@@ -2,7 +2,7 @@ id: jira-detect
 
 info:
   name: Detect Jira Issue Management Software
-  author: pdteam & philippedelteil
+  author: pdteam,philippedelteil
   severity: info
   tags: panel
 
@@ -19,6 +19,7 @@ requests:
       - type: word
         words:
           - "Project Management Software"
+
     extractors:
       - type: regex
         part: body
