--- a/vulnerabilities/other/php-timeclock-xss.yaml
+++ b/vulnerabilities/other/php-timeclock-xss.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: PHP Timeclock version 1.04 (and prior) Cross-Site Scripting vulnerabilities
   reference: https://www.exploit-db.com/exploits/49853
-  tags: xss,php-timeclock
+  tags: xss,php,timeclock
 
 requests:
   - method: GET
@@ -21,7 +21,10 @@ requests:
       - type: word
         words:
           - "<svg/onload=alert`{{randstr}}`>"
+          - "PHP Timeclock Admin Login"
         part: body
+        condition: and
+
       - type: word
         words:
           - "text/html"
