--- a/technologies/nexus-detect.yaml
+++ b/technologies/nexus-detect.yaml
@@ -4,7 +4,7 @@ info:
   name: Nexus Repository Manager (NRM) Instance Detection Template
   author: righettod
   severity: info
-  description: try to detect the presence of a NRM instance via the REST API OpenDocument descriptor
+  description: Try to detect the presence of a NRM instance via the REST API OpenDocument descriptor
   tags: nexus
 
 requests:
