Add tag "tech" like others technologies templates

--- a/technologies/nexus-detect.yaml
+++ b/technologies/nexus-detect.yaml
@@ -5,7 +5,7 @@ info:
   author: righettod
   severity: info
   description: Try to detect the presence of a NRM instance via the REST API OpenDocument descriptor
-  tags: nexus
+  tags: tech,nexus
 
 requests:
   - method: GET
