--- a/exposed-panels/rstudio-detect.yaml
+++ b/exposed-panels/rstudio-detect.yaml
@@ -4,7 +4,7 @@ info:
   name: RStudio panel detector
   author: philippedelteil
   severity: info
-  tags: panel
+  tags: panel,rstudio
 
 requests:
   - method: GET
