--- a/exposures/configs/phalcon-framework-source.yaml
+++ b/exposures/configs/phalcon-framework-source.yaml
@@ -11,6 +11,7 @@ requests:
     path:
       - "{{BaseURL}}/anything_here"
 
+    matchers-condition: and
     matchers:
       - type: word
         part: body
@@ -18,3 +19,7 @@ requests:
           - "Phalcon Framework"
           - "AnythingHereController"
         condition: and
+
+      - type: status
+        status:
+          - 200
