--- a/vulnerabilities/wordpress/wordpress-db-backup-listing.yaml
+++ b/vulnerabilities/wordpress/wordpress-db-backup-listing.yaml
@@ -1,23 +1,26 @@
-id: wordpress-db-backup-1
+id: wordpress-db-backup-listing
 
 info:
   name: WordPress DB Backup
-  author: Suman Kar
+  author: Suman_Kar
   severity: medium
-  tags: wordpress,backups
+  tags: wordpress,backup
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/uploads/database-backups/"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Index of /"
+          - "wp-content/uploads/database-backups"
           - ".sql"
         condition: and
         part: body
+
       - type: status
         status:
           - 200
