--- a/exposed-panels/glpi-login.yaml
+++ b/exposed-panels/glpi-login.yaml
@@ -17,4 +17,5 @@ requests:
       - type: word
         words:
           - '<title>GLPI - Аутентификация</title>'
+          - 'GLPI Copyright'
         condition: and
