--- a/vulnerabilities/wordpress/wpdm-cache-session.yaml
+++ b/vulnerabilities/wordpress/wpdm-cache-session.yaml
@@ -17,6 +17,7 @@ requests:
         words:
           - "Index of /"
           - ".txt"
+          - "wpdm-cache"
         condition: and
         part: body
       - type: status
