--- a/vulnerabilities/gitlab/gitlab-user-enumeration.yaml
+++ b/vulnerabilities/gitlab/gitlab-user-enumeration.yaml
@@ -1,31 +1,34 @@
 id: gitlab-user-enumeration
-info: 
-  author: "Suman Kar"
-  name: "GitLab - User Enumeration"
+
+info:
+  author: Suman_Kar
+  name: GitLab - User Enumeration
   severity: info
-  tags: "gitlab,enumeration"
-requests: 
-  - 
-    attack: sniper
-    matchers: 
-      - 
-        part: body
-        regex: 
-          - "exists.*:true"
-        type: regex
-      - 
-        status: 
-          - 200
-        type: status
-    matchers-condition: and
-    payloads: 
+  tags: gitlab,enumeration,fuzz
+
+
+requests:
+  - payloads:
       dlist: helpers/wordlists/user-list.txt
-    raw: 
-      - "GET /users/{{dlist}}/exists HTTP/1.1 \n\
-          Host: {{Hostname}}\n\
-          User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0\n\
-          Accept-Language: en-US,en;q=0.9\n\
-          Accept: application/json, text/plain, */*\n\
-          Referer: {{BaseURL}}\n\
-          Connection: keep-alive \n"
+    attack: sniper
     threads: 50
+    raw:
+      - |
+        GET /users/{{dlist}}/exists HTTP/1.1
+        Host: {{Hostname}}
+        Accept-Language: en-US,en;q=0.9
+        Accept: application/json, text/plain, */*
+        Referer: {{BaseURL}}
+        Connection: keep-alive
+
+    matchers-condition: and
+    matchers:
+
+      - type: regex
+        part: body
+        regex:
+          - "exists.*:true"
+
+      - type: status
+        status:
+          - 200
