--- a/exposed-panels/adobe-connect-central-login.yaml
+++ b/exposed-panels/adobe-connect-central-login.yaml
@@ -4,7 +4,7 @@ info:
   name: Adobe Connect Central Login
   author: dhiyaneshDk
   severity: info
-  tags: adobe,user,panel
+  tags: adobe,panel
 
 requests:
   - method: GET
