--- a/misconfiguration/adobe/adobe-connect-username-exposure.yaml
+++ b/misconfiguration/adobe/adobe-connect-username-exposure.yaml
@@ -5,7 +5,7 @@ info:
   reference: https://packetstormsecurity.com/files/161345/Adobe-Connect-10-Username-Disclosure.html
   author: dhiyaneshDk
   severity: low
-  tags: adobe,user
+  tags: adobe,disclosure
 
 requests:
   - method: GET
@@ -17,7 +17,9 @@ requests:
       - type: word
         words:
           - 'Administrators name:'
+          - 'Support Administrators email address:'
         part: body
+        condition: and
 
       - type: status
         status:
