--- a/misconfiguration/adobe/adobe-connect-version.yaml
+++ b/misconfiguration/adobe/adobe-connect-version.yaml
@@ -4,7 +4,7 @@ info:
   name: Adobe Connect Central Version
   author: dhiyaneshDk
   severity: info
-  tags: adobe,user,version
+  tags: adobe
 
 requests:
   - method: GET
@@ -15,8 +15,13 @@ requests:
     matchers:
       - type: word
         words:
-          - 'package'
+          - 'package='
         part: body
+
+      - type: word
+        words:
+          - 'text/plain'
+        part: header
 
       - type: status
         status:
