URL Fuzzer - Discover hidden files and directories

--- a/fuzzing/url-fuzzer.yaml
+++ b/fuzzing/url-fuzzer.yaml
@@ -8,7 +8,7 @@ info:
 
   reference: |
         - wordlists https://github.com/danielmiessler/SecLists/tree/master/Discovery/Web-Content
-  
+
 requests:
   - payloads:
       dlist: helpers/wordlists/directory-list.txt
@@ -18,7 +18,7 @@ requests:
 
     raw:
       - |
-        GET {{dlist}}
+        GET {{dlist}} HTTP/1.1
         Host: {{Hostname}}
         Referer: {{BaseURL}}
 
