--- a/vulnerabilities/confluence/confluence-ssrf-sharelinks.yaml
+++ b/vulnerabilities/confluence/confluence-ssrf-sharelinks.yaml
@@ -8,7 +8,7 @@ info:
   reference: |
     - https://bitbucket.org/atlassian/confluence-business-blueprints/pull-requests/144/issue-60-conf-45342-ssrf-in-sharelinks
     - https://github.com/assetnote/blind-ssrf-chains#confluence
-  tags: confluence,atlassian,ssrf,jira
+  tags: confluence,atlassian,ssrf,jira,oob
 
 requests:
   - method: GET
