--- a/technologies/metabase-detect.yaml
+++ b/technologies/metabase-detect.yaml
@@ -20,6 +20,8 @@ requests:
           - "<title>Metabase</title>"
           - "window.MetabaseBootstrap"
           - "window.MetabaseRoot"
+        part: body
+        condition: and
 
     extractors:
       - type: regex
