--- a/workflows/wordpress-workflow.yaml
+++ b/workflows/wordpress-workflow.yaml
@@ -31,6 +31,7 @@ workflows:
           - template: cves/2020/CVE-2020-35951.yaml
           - template: cves/2020/CVE-2020-35489.yaml
           - template: cves/2021/CVE-2021-24146.yaml
+          - template: cves/2021/CVE-2021-24237.yaml
           - template: cves/2021/CVE-2021-24176.yaml
           - template: cves/2021/CVE-2021-24285.yaml
           - template: cves/2021/CVE-2021-24316.yaml
