--- a/technologies/sap-web-dispatcher-admin-portal.yaml
+++ b/technologies/sap-web-dispatcher-admin-portal.yaml
@@ -3,23 +3,25 @@ info:
   name: SAP Web Dispatcher admin portal detection
   author: randomstr1ng
   description: Detection of SAP Web Dispatcher Admin Portal
-  severity: low
+  severity: info
   tags: sap,webserver,proxy
 
 requests:
   - method: GET
     redirects: true
-    max-redirects: 5
+    max-redirects: 2
+
     path:
       - "{{BaseURL}}/sap/wdisp/admin/public/default.html"
+
     matchers-condition: and
     matchers:
-      - type: regex
+      - type: word
         part: header
-        regex:
+        words:
           - "SAP NetWeaver Application Server"
 
-      - type: regex
+      - type: word
         part: body
-        regex:
-          - "Administration"
+        words:
+          - "<title>Administration</title>"
