--- a/technologies/sap-web-dispatcher-admin-portal.yaml
+++ b/technologies/sap-web-dispatcher-admin-portal.yaml
@@ -19,9 +19,13 @@ requests:
       - type: word
         part: header
         words:
-          - "SAP NetWeaver Application Server"
-
+          - "Basic realm=\"WEB ADMIN\""
+          
+      - type: status
+        status:
+          - 401
+          
       - type: word
         part: body
         words:
-          - "<title>Administration</title>"
+          - "SAP Web Dispatcher"
