--- a/technologies/sap-web-dispatcher-admin-portal.yaml
+++ b/technologies/sap-web-dispatcher-admin-portal.yaml
@@ -1,4 +1,5 @@
 id: sap-web-dispatcher-admin-portal
+
 info:
   name: SAP Web Dispatcher admin portal detection
   author: randomstr1ng
@@ -18,14 +19,20 @@ requests:
     matchers:
       - type: word
         part: header
+        conditions: or
         words:
           - "Basic realm=\"WEB ADMIN\""
-          
+          - "SAP NetWeaver Application Server"
+
       - type: status
+        conditions: or
         status:
           - 401
-          
+          - 200
+
       - type: word
         part: body
+        conditions: or
         words:
           - "SAP Web Dispatcher"
+          - "<title>Administration</title>"
