--- a/vulnerabilities/other/odoo-database.yaml
+++ b/vulnerabilities/other/odoo-database.yaml
@@ -3,7 +3,7 @@ id: Odoo-Database
 info:
   name: Odoo-Database-Manager
   author: __Fazal,R3dg33k
-  severity: High
+  severity: high
   tags: panel,odoo,manager
 
 requests:
@@ -18,4 +18,6 @@ requests:
           - 200
       - type: word
         words:
-          - 'Create Database'
+          - "<title>Odoo</title>"
+          - "{ action: 'database_manager' }"
+        condition: and
