Moved template to exposed-panels

--- a/exposed-panels/odoo-database-manager.yaml
+++ b/exposed-panels/odoo-database-manager.yaml
@@ -1,10 +1,10 @@
-id: Odoo-Database
+id: odoo-database-manager
 
 info:
   name: Odoo-Database-Manager
   author: __Fazal,R3dg33k
   severity: high
-  tags: panel,odoo,manager
+  tags: panel,odoo
 
 requests:
   - method: GET
