--- a/vulnerabilities/gitlab/gitlab-user-information-disclosure-via-open-api.yaml
+++ b/vulnerabilities/gitlab/gitlab-user-information-disclosure-via-open-api.yaml
@@ -4,7 +4,7 @@ info:
   author: Suman_Kar
   name: GitLab - User Information Disclosure Via Open API
   severity: high
-  tags: gitlab,user-information-disclosure
+  tags: gitlab,disclosure
 
 requests:
   - payloads:
