--- a/technologies/vmware-vrealize-detect.yaml
+++ b/technologies/vmware-vrealize-detect.yaml
@@ -5,6 +5,7 @@ info:
   author: milo2012
   severity: info
   description: Version of VMware vRealize Operations Manager
+  tags: vmware,vrealize
 
 requests:
   - method: GET
@@ -24,7 +25,10 @@ requests:
 
       - type: word
         words:
-          - <title>vRealize Operations Manager</title>
+          - '<title>vRealize Operations Manager</title>'
+          - '<div class="title"> vRealize Operations Manager'
+        part: body
+        condition: and
 
     extractors:
       - type: regex
