--- a/misconfiguration/ssrf-via-oauth-misconfig.yaml
+++ b/misconfiguration/ssrf-via-oauth-misconfig.yaml
@@ -6,6 +6,7 @@ info:
   severity: medium
   description: Sends a POST request with the endpoint "/connect/register" to check external Interaction with multiple POST parameters.
   tags: misconfig,oob,oauth
+  reference: https://portswigger.net/research/hidden-oauth-attack-vectors
 
 requests:
   - raw:
