--- a/vulnerabilities/gitlab/gitlab-user-open-api.yaml
+++ b/vulnerabilities/gitlab/gitlab-user-open-api.yaml
@@ -4,7 +4,7 @@ info:
   author: Suman_Kar
   name: GitLab - User Information Disclosure Via Open API
   severity: high
-  tags: gitlab,disclosure
+  tags: gitlab,disclosure,fuzz
 
 requests:
   - payloads:
@@ -27,6 +27,15 @@ requests:
         part: body
         regex:
           - "username.*"
+          - "id.*"
+          - "name.*"
+        condition: and
+
+      - type: word
+        part: header
+        words:
+          - "application/json"
+
       - type: status
         status:
           - 200
