--- a/vulnerabilities/gitlab/gitlab-user-open-api.yaml
+++ b/vulnerabilities/gitlab/gitlab-user-open-api.yaml
@@ -3,8 +3,9 @@ id: gitlab-user-open-api
 info:
   author: Suman_Kar
   name: GitLab - User Information Disclosure Via Open API
-  severity: high
+  severity: medium
   tags: gitlab,disclosure,fuzz
+  reference: https://gitlab.com/gitlab-org/gitlab-foss/-/issues/40158
 
 requests:
   - payloads:
