--- a/workflows/gitlab-workflow.yaml
+++ b/workflows/gitlab-workflow.yaml
@@ -11,3 +11,6 @@ workflows:
   - template: exposed-panels/gitlab-detect.yaml
     subtemplates:
       - template: misconfiguration/gitlab/
+      - template: vulnerabilities/gitlab/
+      - template: cves/2020/CVE-2020-2096.yaml
+      - template: cves/2021/CVE-2021-22214.yaml
