--- a/workflows/gitlab-workflow.yaml
+++ b/workflows/gitlab-workflow.yaml
@@ -14,3 +14,4 @@ workflows:
       - template: vulnerabilities/gitlab/
       - template: cves/2020/CVE-2020-2096.yaml
       - template: cves/2021/CVE-2021-22214.yaml
+      - template: default-logins/gitlab/gitlab-weak-login.yaml
