--- a/technologies/vmware-vrealize-detect.yaml
+++ b/technologies/vmware-vrealize-detect.yaml
@@ -26,7 +26,7 @@ requests:
       - type: word
         words:
           - '<title>vRealize Operations Manager</title>'
-          - '<div class="title"> vRealize Operations Manager'
+          - 'VMware<span class="trademark">'
         part: body
         condition: and
 
