--- a/technologies/vmware-vrealize-detect.yaml
+++ b/technologies/vmware-vrealize-detect.yaml
@@ -26,7 +26,7 @@ requests:
       - type: word
         words:
           - '<title>vRealize Operations Manager</title>'
-          - 'VMware<span class="trademark">'
+          - 'vmware'
         part: body
         condition: and
 
