--- a/vulnerabilities/joomla/joomla-jck-editor-sql-injection.yaml
+++ b/vulnerabilities/joomla/joomla-jck-editor-sql-injection.yaml
@@ -1,10 +1,11 @@
-id: CVE-2018-17254-joomla-jck-editor-sql-injection
+id: CVE-2018-17254
 
 info:
+  name: CVE-2018-17254 Joomla JCK Editor SQL Injection
   author: Suman_Kar
-  name: Joomla JCK Editor SQL Injection CVE-2018-17254
+  description: The JCK Editor component 6.4.4 for Joomla! allows SQL Injection via the jtreelink/dialogs/links.php parent parameter.
   severity: high
-  tags: joomla,sqli
+  tags: joomla,sqli,cve,cve2018
 
 requests:
   - raw:
@@ -14,13 +15,8 @@ requests:
         User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:79.0) Gecko/20100101 Firefox/79.0
         Referer: {{BaseURL}}
 
-    matchers-condition: or
     matchers:
-      - type: regex
+      - type: word
         part: body
-        regex:
-          - nuclei-template
-      - type: regex
-        part: body
-        regex:
-          - Mod_Security
+        words:
+          - "nuclei-template"
