--- a/misconfiguration/zhiyuan-oa-unauthorized.yaml
+++ b/misconfiguration/zhiyuan-oa-unauthorized.yaml
@@ -1,7 +1,7 @@
 id: zhiyuan-oa-unauthorized
 
 info:
-  name: Zhiyuan Oa unauthorized
+  name: Zhiyuan Oa Unauthorized
   author: pikpikcu
   severity: low
   reference: https://buaq.net/go-53721.html
@@ -20,6 +20,11 @@ requests:
           - "serverIdentifier"
           - "companyName"
         condition: and
+
+      - type: word
+        words:
+          - "application/json"
+        part: header
 
       - type: status
         status:
