--- a/vulnerabilities/wordpress/wordpress-redirection-listing.yaml
+++ b/vulnerabilities/wordpress/wordpress-redirection-listing.yaml
@@ -12,12 +12,15 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/redirection/"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Index of"
           - "/wp-content/plugins/redirection/"
+        condition: and
+
       - type: status
         status:
           - 200
