--- a/vulnerabilities/wordpress/wp-plugin-utlimate-member.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-utlimate-member.yaml
@@ -1,4 +1,5 @@
 id: wordpress-plugins-ultimate-member
+
 info:
   name: WordPress Plugin Ultimate Member
   author: pussycat0x
@@ -6,16 +7,20 @@ info:
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6998
   tags: wordpress,listing
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/ultimate-member/"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Index of"
           - "/wp-content/plugins/ultimate-member/"
+        condition: and
+
       - type: status
         status:
           - 200
