--- a/vulnerabilities/wordpress/wordpress-woocommerce-plugin.yaml
+++ b/vulnerabilities/wordpress/wordpress-woocommerce-plugin.yaml
@@ -4,7 +4,7 @@ info:
   name: WordPress Woocommerce Plugin Directory Listing
   author: dhiyaneshDK
   severity: low
-  description: Searches for sensitive directories present in the elementor wordpress plugin.
+  description: Searches for sensitive directories present in the woocommerce wordpress plugin.
   reference: https://www.exploit-db.com/ghdb/6192
   tags: wordpress,listing
 
