Updated matcher & added extractor

--- a/exposed-panels/iptime-router.yaml
+++ b/exposed-panels/iptime-router.yaml
@@ -14,9 +14,17 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - 'ipTIME'
+      - type: regex
+        regex:
+          - <TITLE>ipTIME ([A-Z0-9_-]+)<\/TITLE>
+
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - <TITLE>ipTIME ([A-Z0-9_-]+)<\/TITLE>
