--- a/default-logins/oracle/oracle-bi-default-credentials.yaml
+++ b/default-logins/oracle/oracle-bi-default-credentials.yaml
@@ -4,7 +4,7 @@ info:
   name: Oracle Business Intelligence Default Credentials
   author: milo2012
   severity: high
-  tags: oracle,business intelligence
+  tags: oracle,dlogin
 
 requests:
   - raw:
