--- a/vulnerabilities/wordpress/wordpress-woocommerce-listing.yaml
+++ b/vulnerabilities/wordpress/wordpress-woocommerce-listing.yaml
@@ -18,6 +18,8 @@ requests:
         words:
           - "Index of"
           - "/wp-content/plugins/woocommerce/"
+        condition: and
+
       - type: status
         status:
           - 200
