--- a/vulnerabilities/wordpress/wordpress-bbpress-plugin-listing.yaml
+++ b/vulnerabilities/wordpress/wordpress-bbpress-plugin-listing.yaml
@@ -1,4 +1,4 @@
-id: wordpress-bbpress-plugin
+id: wordpress-bbpress-plugin-listing
 
 info:
   name: WordPress bbPress Plugin Directory Listing
@@ -18,6 +18,8 @@ requests:
         words:
           - "Index of"
           - "/wp-content/plugins/bbpress/"
+        condition: and
+
       - type: status
         status:
           - 200
