--- a/vulnerabilities/wordpress/wordpress-elementor-plugin-listing.yaml
+++ b/vulnerabilities/wordpress/wordpress-elementor-plugin-listing.yaml
@@ -1,4 +1,4 @@
-id: wordpress-elementor-plugin
+id: wordpress-elementor-plugin-listing
 
 info:
   name: WordPress Elementor Plugin Directory Listing
@@ -18,6 +18,8 @@ requests:
         words:
           - "Index of"
           - "/wp-content/plugins/elementor/"
+        condition: and
+
       - type: status
         status:
           - 200
