--- a/technologies/rhymix-cms-detect.yaml
+++ b/technologies/rhymix-cms-detect.yaml
@@ -5,7 +5,7 @@ info:
   author: gy741
   severity: info
   description: Detects Rhymix CMS
-  tags: tech,rhymix,cms
+  tags: tech,rhymix
   references: https://github.com/rhymix/rhymix
 
 requests:
