--- a/exposed-panels/mikrotik-routeros.yaml
+++ b/exposed-panels/mikrotik-routeros.yaml
@@ -17,7 +17,8 @@ requests:
       - type: word
         words:
           - 'If this device is not in your possession, please contact your local network administrator'
-
+          - '.mikrotik.com'
+        condition: and
       - type: status
         status:
           - 200
