--- a/exposed-panels/netis-router.yaml
+++ b/exposed-panels/netis-router.yaml
@@ -5,7 +5,7 @@ info:
   author: gy741
   severity: info
   reference: https://www.tacnetsol.com/blog/cve-2019-8985-rce
-  tags: panel,login,router
+  tags: panel,login,netis
 
 requests:
   - method: GET
