--- a/exposed-panels/netis-router.yaml
+++ b/exposed-panels/netis-router.yaml
@@ -12,7 +12,7 @@ requests:
     path:
       - '{{BaseURL}}/login.htm'
 
-    matchers-condition: or
+    matchers-condition: and
     matchers:
       - type: word
         part: body
