--- a/vulnerabilities/other/jeewms-lfi.yaml
+++ b/vulnerabilities/other/jeewms-lfi.yaml
@@ -27,7 +27,9 @@ requests:
       - type: regex
         regex:
           - "root:[x*]:0:0"
-          - "for 16-bit app support"
+          - "\\[(font|extension|file)s\\]"
+        condition: or
+        part: body
 
       - type: status
         status:
