--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -25,7 +25,7 @@ requests:
       - type: regex
         part: body
         regex:
-          - (K|k)ey(up|down|press)
+          - (K|k)ey([U|u]p|[D|d]own|[P|p]ress)
           - (K|k)eyboard(N|n)avigation
         condition: or
         negative: true
