more strict matcher

--- a/technologies/webmodule-ee.yaml
+++ b/technologies/webmodule-ee.yaml
@@ -1,19 +1,20 @@
 id: webmodule-ee-detection
 info:
-  name: Technology Detection
+  name: Webmodule Detection
   author: pussycat0x
   severity: info
-  description: webmodule-ee Technology Detection
   reference: https://www.exploit-db.com/ghdb/7001
-  tags: webmodule-ee,detection
+  tags: webmodule-ee,tech
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/webmodule-ee/login.seam"
+
     matchers:
-      - type: word 
+      - type: word
         words:
-          - "Webmodule"
+          - "<title>Webmodule</title>"
 
       - type: status
         status:
