Some fixes (WIP)
- Added missing matcher condition
- Updated severity to lowercase, as it's case sensitive

--- a/misconfiguration/phpmyadmin-sql.php-server.yaml
+++ b/misconfiguration/phpmyadmin-sql.php-server.yaml
@@ -1,16 +1,19 @@
-id: phpmyadmin misconfiguration
+id: phpmyadmin-misconfiguration
+
 info:
   name: Sensitive data exposure
   author: pussycat0x
-  severity: High
+  severity: high
   description: Unauthenticated phpmyadmin  leads expose sensitive information
   reference: https://www.exploit-db.com/ghdb/6997
-  tags: phpmyadmin,misconfiguration,
+  tags: phpmyadmin,misconfig
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/phpmyadmin/sql.php?server=1"
-    redirects: true
+
+    matchers-condition: and
     matchers:
       - type: word
         words:
