--- a/vulnerabilities/wordpress/wordpress-123ContactForm.yaml
+++ b/vulnerabilities/wordpress/wordpress-123ContactForm.yaml
@@ -1,6 +1,7 @@
-id: Wordpress-plugins-123ContactForm
+id: wp-123contactform-plugin-listing
+
 info:
-  name: Wordpress-plugins-123ContactForm
+  name: WordPress 123ContactForm Plugin Directory Listing
   author: pussycat0x
   severity: low
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
@@ -8,16 +9,20 @@ info:
      - https://blog.sucuri.net/2021/01/critical-vulnerabilities-in-123contactform-for-wordpress-wordpress-plugin.html
      - https://www.exploit-db.com/ghdb/6979
   tags: wordpress,listing
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/123contactform-for-wordpress/"
+
     matchers-condition: and
     matchers:
       - type: word
         words: 
           - "Index of"
           - "/123contactform-for-wordpress"
+        condition: and
+
       - type: status
         status:
           - 200
