--- a/misconfiguration/phpmyadmin-sql.php-server.yaml
+++ b/misconfiguration/phpmyadmin-sql.php-server.yaml
@@ -4,21 +4,23 @@ info:
   name: Sensitive data exposure
   author: pussycat0x
   severity: high
-  description: Unauthenticated phpmyadmin  leads expose sensitive information
+  description: Unauthenticated phpmyadmin leads to exposure of sensitive information
   reference: https://www.exploit-db.com/ghdb/6997
   tags: phpmyadmin,misconfig
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/phpmyadmin/sql.php?server=1"
+      - "{{BaseURL}}/phpmyadmin/index.php?db=information_schema"
+      - "{{BaseURL}}/phpMyAdmin/index.php?db=information_schema"
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "Database"
-
+          - "var db    = 'information_schema';"
+          - "var opendb_url = 'db_structure.php';"
+        condition: and
       - type: status
         status:
           - 200
