--- a/vulnerabilities/other/ALFA_DATA.yaml
+++ b/vulnerabilities/other/ALFA_DATA.yaml
@@ -18,8 +18,11 @@ requests:
       - type: word
         words:
           - "Index of"
+      - type: word
+        words:
           - "/wp-content/plugins/"
           - "/wp-includes/ALFA_DATA/"
+        condition: or
       - type: status
         status:
           - 200
