--- a/vulnerabilities/other/ALFA_DATA.yaml
+++ b/vulnerabilities/other/ALFA_DATA.yaml
@@ -22,6 +22,8 @@ requests:
         words:
           - "/wp-content/plugins/"
           - "/wp-includes/ALFA_DATA/"
+          - "/ALFA_DATA/alfacgiapi/"
+          - "/cgi-bin/ALFA_DATA/alfacgiapi/"
         condition: or
       - type: status
         status:
