--- a/vulnerabilities/other/resin-inputfile-fileread.yaml
+++ b/vulnerabilities/other/resin-inputfile-fileread.yaml
@@ -16,5 +16,5 @@ requests:
           - 200
       - type: word
         words:
-          - "<%@ page session=\"false\" import=\"com.caucho.vfs.*, com.caucho.server.webapp.*\" %>"
+          - "%@ page session=\"false\" import=\"com.caucho.vfs.*, com.caucho.server.webapp.*\" %"
         part: body
